fixes for forms, photo images inside of tiles, and tabs getting cut off unintentionally

--- a/sass/ui/_forms.scss
+++ b/sass/ui/_forms.scss
@@ -39,7 +39,6 @@ form {
 .field {
   position: relative;
   max-width: 100%;
-  overflow: hidden;
   margin-bottom: 10px;
   vertical-align: middle;
   &.metro, .metro {
