--- a/sass/ui/_tabs.scss
+++ b/sass/ui/_tabs.scss
@@ -7,7 +7,6 @@
     padding: 0;
     border-bottom: 1px solid darken($default-color, 5%);
     > li {
-      position: relative;
       display: inline-block;
       width: auto;
       padding: 0;
